Finalize dividend DRIP flow and backend validation