@@ -2,16 +2,18 @@ package com.shouldabought.backend.account;
 
 import java.math.BigDecimal;
 import java.math.MathContext;
+import java.math.RoundingMode;
 import java.time.LocalDateTime;
+import java.time.ZoneId;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-import com.shouldabought.backend.market.AlphaVantageService;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import com.shouldabought.backend.market.AlphaVantageService;
 import com.shouldabought.backend.market.StockPrice;
 import com.shouldabought.backend.market.StockPriceRepository;
 import com.shouldabought.backend.transaction.Transaction;
@@ -21,25 +23,37 @@ import com.shouldabought.backend.transaction.TransactionType;
 
 @Service
 public class AccountService {
-
+	private static final ZoneId MARKET_ZONE = ZoneId.of("America/New_York");
 	private final AccountRepository accountRepository;
 	private final TransactionRepository transactionRepository;
 	private final StockPriceRepository stockPriceRepository;
 	private final AlphaVantageService alphaVantageService;
 
 	public AccountService(AccountRepository accountRepository, TransactionRepository transactionRepository,
-                          StockPriceRepository stockPriceRepository, AlphaVantageService alphaVantageService) {
+			StockPriceRepository stockPriceRepository, AlphaVantageService alphaVantageService) {
 
 		this.accountRepository = accountRepository;
 		this.transactionRepository = transactionRepository;
 		this.stockPriceRepository = stockPriceRepository;
-        this.alphaVantageService = alphaVantageService;
-    }
+		this.alphaVantageService = alphaVantageService;
+	}
 
 	@Transactional
 	public Account createAccount(String name, BigDecimal initialCash) {
 
-		Account account = new Account(name, initialCash, AccountType.REALITY);
+		if (name == null || name.isBlank()) {
+			throw new RuntimeException("Account name is required");
+		}
+
+		if (initialCash == null) {
+			throw new RuntimeException("Initial cash is required");
+		}
+
+		if (initialCash.compareTo(BigDecimal.ZERO) < 0) {
+			throw new RuntimeException("Initial cash cannot be negative");
+		}
+
+		Account account = new Account(name.trim(), initialCash, AccountType.REALITY);
 
 		accountRepository.save(account);
 
@@ -52,16 +66,13 @@ public class AccountService {
 
 	@Transactional
 	public Transaction sellStock(Long accountId, String symbol, BigDecimal quantity, BigDecimal cashAmount) {
+
 		Account account = accountRepository.findById(accountId)
 				.orElseThrow(() -> new RuntimeException("Account not found"));
 
-		symbol = symbol.trim().toUpperCase();
-
-		StockPrice stockPrice =
-				refreshStockPrice(symbol);
-
-		BigDecimal price =
-				stockPrice.getPrice();
+		if (symbol == null || symbol.isBlank()) {
+			throw new RuntimeException("Symbol is required");
+		}
 
 		// Must provide exactly one of quantity or cashAmount
 		if (quantity != null && cashAmount != null) {
@@ -72,20 +83,23 @@ public class AccountService {
 			throw new RuntimeException("Either quantity or cashAmount is required");
 		}
 
+		if (cashAmount != null && cashAmount.compareTo(BigDecimal.ZERO) <= 0) {
+			throw new RuntimeException("Cash amount must be greater than zero");
+		}
+
+		if (quantity != null && quantity.compareTo(BigDecimal.ZERO) <= 0) {
+			throw new RuntimeException("Quantity must be greater than zero");
+		}
+
+		symbol = symbol.trim().toUpperCase();
+
+		StockPrice stockPrice = refreshStockPrice(symbol);
+
+		BigDecimal price = stockPrice.getPrice();
+
 		// Calculate how many shares are being sold
 		if (cashAmount != null) {
-
-			if (cashAmount.compareTo(BigDecimal.ZERO) <= 0) {
-				throw new RuntimeException("Cash amount must be greater than zero");
-			}
-
 			quantity = cashAmount.divide(price, MathContext.DECIMAL128);
-
-		} else {
-
-			if (quantity.compareTo(BigDecimal.ZERO) <= 0) {
-				throw new RuntimeException("Quantity must be greater than zero");
-			}
 		}
 
 		// Calculate current holdings
@@ -127,18 +141,14 @@ public class AccountService {
 
 	@Transactional
 	public Transaction buyStock(Long accountId, String symbol, BigDecimal quantity, BigDecimal cashAmount) {
+
 		Account account = accountRepository.findById(accountId)
 				.orElseThrow(() -> new RuntimeException("Account not found"));
 
-		symbol = symbol.trim().toUpperCase();
+		if (symbol == null || symbol.isBlank()) {
+			throw new RuntimeException("Symbol is required");
+		}
 
-		StockPrice stockPrice =
-				refreshStockPrice(symbol);
-
-		BigDecimal price =
-				stockPrice.getPrice();
-
-		// Must provide exactly one of quantity or cashAmount
 		if (quantity != null && cashAmount != null) {
 			throw new RuntimeException("Provide either quantity or cashAmount, not both");
 		}
@@ -147,20 +157,28 @@ public class AccountService {
 			throw new RuntimeException("Either quantity or cashAmount is required");
 		}
 
+		if (cashAmount != null && cashAmount.compareTo(BigDecimal.ZERO) <= 0) {
+			throw new RuntimeException("Cash amount must be greater than zero");
+		}
+
+		if (quantity != null && quantity.compareTo(BigDecimal.ZERO) <= 0) {
+			throw new RuntimeException("Quantity must be greater than zero");
+		}
+
+		symbol = symbol.trim().toUpperCase();
+
+		StockPrice stockPrice = refreshStockPrice(symbol);
+
+		BigDecimal price = stockPrice.getPrice();
+
 		BigDecimal totalCost;
 
 		if (cashAmount != null) {
-			if (cashAmount.compareTo(BigDecimal.ZERO) <= 0) {
-				throw new RuntimeException("Cash amount must be greater than zero");
-			}
 
 			totalCost = cashAmount;
 			quantity = cashAmount.divide(price, MathContext.DECIMAL128);
 
 		} else {
-			if (quantity.compareTo(BigDecimal.ZERO) <= 0) {
-				throw new RuntimeException("Quantity must be greater than zero");
-			}
 
 			totalCost = quantity.multiply(price);
 		}
@@ -282,9 +300,12 @@ public class AccountService {
 			stockValue = stockValue.add(marketValue);
 		}
 
-		BigDecimal totalBalance = account.getCash().add(stockValue);
+		BigDecimal roundedStockValue = stockValue.setScale(4, RoundingMode.HALF_UP);
 
-		return new AccountBalanceResponse(account.getId(), account.getCash(), stockValue, totalBalance);
+		BigDecimal totalBalance = account.getCash().add(roundedStockValue).setScale(4, RoundingMode.HALF_UP);
+
+		return new AccountBalanceResponse(account.getId(), account.getCash().setScale(4, RoundingMode.HALF_UP),
+				roundedStockValue, totalBalance);
 	}
 
 	public PortfolioResponse getPortfolio(Long accountId) {
@@ -315,13 +336,12 @@ public class AccountService {
 			} else if (transaction.getType() == TransactionType.SELL) {
 
 				BigDecimal remainingToSell = transaction.getQuantity();
-				BigDecimal sellPrice = transaction.getPrice();
 
 				BigDecimal totalCostRemoved = BigDecimal.ZERO;
 
 				while (remainingToSell.compareTo(BigDecimal.ZERO) > 0 && !lots.isEmpty()) {
 
-					CostLot oldestLot = lots.get(0);
+					CostLot oldestLot = lots.getFirst();
 
 					BigDecimal sharesFromLot = remainingToSell.min(oldestLot.quantity);
 
@@ -338,7 +358,7 @@ public class AccountService {
 					remainingToSell = remainingToSell.subtract(sharesFromLot, MathContext.DECIMAL128);
 
 					if (oldestLot.quantity.compareTo(BigDecimal.ZERO) <= 0) {
-						lots.remove(0);
+						lots.removeFirst();
 					}
 				}
 
@@ -400,14 +420,19 @@ public class AccountService {
 			BigDecimal gainLoss = marketValue.subtract(totalCostBasis, MathContext.DECIMAL128);
 
 			stockValue = stockValue.add(marketValue, MathContext.DECIMAL128);
+
 			BigDecimal gainLossPercentage = BigDecimal.ZERO;
 
 			if (totalCostBasis.compareTo(BigDecimal.ZERO) > 0) {
+
 				gainLossPercentage = gainLoss.divide(totalCostBasis, MathContext.DECIMAL128)
 						.multiply(BigDecimal.valueOf(100), MathContext.DECIMAL128);
 			}
-			holdings.add(new PortfolioResponse.Holding(symbol, totalQuantity, currentPrice, marketValue, averageCost,
-					gainLoss, gainLossPercentage, BigDecimal.ZERO));
+
+			holdings.add(new PortfolioResponse.Holding(symbol, totalQuantity.setScale(12, RoundingMode.HALF_UP),
+					currentPrice.setScale(4, RoundingMode.HALF_UP), marketValue.setScale(4, RoundingMode.HALF_UP),
+					averageCost.setScale(4, RoundingMode.HALF_UP), gainLoss.setScale(4, RoundingMode.HALF_UP),
+					gainLossPercentage.setScale(4, RoundingMode.HALF_UP), BigDecimal.ZERO));
 		}
 
 		BigDecimal totalValue = account.getCash().add(stockValue, MathContext.DECIMAL128);
@@ -419,12 +444,13 @@ public class AccountService {
 			if (totalValue.compareTo(BigDecimal.ZERO) > 0) {
 
 				accountPercentage = holding.marketValue().divide(totalValue, MathContext.DECIMAL128)
-						.multiply(BigDecimal.valueOf(100), MathContext.DECIMAL128);
+						.multiply(BigDecimal.valueOf(100), MathContext.DECIMAL128).setScale(4, RoundingMode.HALF_UP);
 			}
 
 			return new PortfolioResponse.Holding(holding.symbol(), holding.quantity(), holding.currentPrice(),
 					holding.marketValue(), holding.averageCost(), holding.gainLoss(), holding.gainLossPercentage(),
 					accountPercentage);
+
 		}).toList();
 
 		BigDecimal totalGainLoss = finalHoldings.stream().map(PortfolioResponse.Holding::gainLoss)
@@ -433,8 +459,9 @@ public class AccountService {
 		BigDecimal totalRealizedGainLoss = realizedGainLoss.values().stream().reduce(BigDecimal.ZERO,
 				(a, b) -> a.add(b, MathContext.DECIMAL128));
 
-		return new PortfolioResponse(account.getCash(), totalValue, totalGainLoss, totalRealizedGainLoss,
-				finalHoldings);
+		return new PortfolioResponse(account.getCash().setScale(4, RoundingMode.HALF_UP),
+				totalValue.setScale(4, RoundingMode.HALF_UP), totalGainLoss.setScale(4, RoundingMode.HALF_UP),
+				totalRealizedGainLoss.setScale(4, RoundingMode.HALF_UP), finalHoldings);
 	}
 
 	private static class CostLot {
@@ -452,27 +479,17 @@ public class AccountService {
 
 		return accountRepository.findById(accountId).orElseThrow(() -> new RuntimeException("Account not found"));
 	}
+
 	private StockPrice refreshStockPrice(String symbol) {
 
-		String normalizedSymbol =
-				symbol.trim().toUpperCase();
+		String normalizedSymbol = symbol.trim().toUpperCase();
 
-		BigDecimal price =
-				alphaVantageService.getCurrentPrice(normalizedSymbol);
+		BigDecimal price = alphaVantageService.getCurrentPrice(normalizedSymbol);
 
-		LocalDateTime now =
-				LocalDateTime.now();
+		LocalDateTime now = LocalDateTime.now(MARKET_ZONE);
 
-		StockPrice stockPrice =
-				stockPriceRepository
-						.findBySymbol(normalizedSymbol)
-						.orElseGet(() ->
-								new StockPrice(
-										normalizedSymbol,
-										price,
-										now
-								)
-						);
+		StockPrice stockPrice = stockPriceRepository.findBySymbol(normalizedSymbol)
+				.orElseGet(() -> new StockPrice(normalizedSymbol, price, now));
 
 		stockPrice.updatePrice(price, now);
 
